--- a/hebi_a-2084-01-parallel-gripper_moveit_config/config/fake_controllers.yaml
+++ b/hebi_a-2084-01-parallel-gripper_moveit_config/config/fake_controllers.yaml
@@ -1,10 +1,11 @@
 controller_list:
   - name: fake_hebi_arm_controller
     joints:
-      - HEBI/base/X5_4
-      - HEBI/shoulder/X5_9
-      - HEBI/elbow/X5_4
-      - HEBI/wrist1/X5_1
+      - Arm/J1_base/X5_4
+      - Arm/J2_shoulder/X5_9
+      - Arm/J3_elbow/X5_4
+      - Arm/J4_wrist1/X5_1
   - name: fake_hand_controller
     joints:
+      - Arm/J4_wrist1/X5_1
       - end_effector/input_l_finger
