--- a/hebi_a-2084-01-parallel-gripper_moveit_config/config/ompl_planning.yaml
+++ b/hebi_a-2084-01-parallel-gripper_moveit_config/config/ompl_planning.yaml
@@ -146,10 +146,10 @@ hebi_arm:
     - LazyPRMstar
     - SPARS
     - SPARStwo
-  projection_evaluator: joints(HEBI/base/X5_4,HEBI/shoulder/X5_9)
+  projection_evaluator: joints(Arm/J1_base/X5_4,Arm/J2_shoulder/X5_9)
   longest_valid_segment_fraction: 0.005
 hand:
-  default_planner_config: None
+  default_planner_config: ""
   planner_configs:
     - SBL
     - EST
