--- a/hebi_a-2084-01-parallel-gripper_moveit_config/config/ros_controllers.yaml
+++ b/hebi_a-2084-01-parallel-gripper_moveit_config/config/ros_controllers.yaml
@@ -9,10 +9,10 @@ generic_hw_control_loop:
 # Settings for ros_control hardware interface
 hardware_interface:
   joints:
-    - HEBI/base/X5_4
-    - HEBI/shoulder/X5_9
-    - HEBI/elbow/X5_4
-    - HEBI/wrist1/X5_1
+    - Arm/J1_base/X5_4
+    - Arm/J2_shoulder/X5_9
+    - Arm/J3_elbow/X5_4
+    - Arm/J4_wrist1/X5_1
     - end_effector/input_l_finger
   sim_control_mode: 1  # 0: position, 1: velocity
 # Publish all joint states
@@ -26,13 +26,17 @@ controller_list:
     default: True
     type: FollowJointTrajectory
     joints:
-      - HEBI/base/X5_4
-      - HEBI/shoulder/X5_9
-      - HEBI/elbow/X5_4
-      - HEBI/wrist1/X5_1
-  - name: hand_controller
-    action_ns: gripper_action
-    type: GripperCommand
-    default: true
-    joints:
-      - end_effector/input_l_finger
+      - Arm/J1_base/X5_4
+      - Arm/J2_shoulder/X5_9
+      - Arm/J3_elbow/X5_4
+      - Arm/J4_wrist1/X5_1
+hand_controller:
+  type: GripperCommand
+  joints:
+    end_effector/input_l_finger
+  gains:
+    end_effector/input_l_finger:
+      p: 100
+      d: 1
+      i: 1
+      i_clamp: 1
