--- a/hebi_a-2084-01_moveit_config/config/joint_limits.yaml
+++ b/hebi_a-2084-01_moveit_config/config/joint_limits.yaml
@@ -2,22 +2,22 @@
 # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
 joint_limits:
-  HEBI/base/X5_4:
+  Arm/J1_base/X5_4:
     has_velocity_limits: true
     max_velocity: 32
     has_acceleration_limits: false
     max_acceleration: 0
-  HEBI/elbow/X5_4:
-    has_velocity_limits: true
-    max_velocity: 32
-    has_acceleration_limits: false
-    max_acceleration: 0
-  HEBI/shoulder/X5_9:
+  Arm/J2_shoulder/X5_9:
     has_velocity_limits: true
     max_velocity: 14
     has_acceleration_limits: false
     max_acceleration: 0
-  HEBI/wrist1/X5_1:
+  Arm/J3_elbow/X5_4:
+    has_velocity_limits: true
+    max_velocity: 32
+    has_acceleration_limits: false
+    max_acceleration: 0
+  Arm/J4_wrist1/X5_1:
     has_velocity_limits: true
     max_velocity: 90
     has_acceleration_limits: false
