--- a/hebi_a-2085-05_moveit_config/config/fake_controllers.yaml
+++ b/hebi_a-2085-05_moveit_config/config/fake_controllers.yaml
@@ -1,8 +1,8 @@
 controller_list:
   - name: fake_hebi_arm_controller
     joints:
-      - HEBI/base/X8_9
-      - HEBI/shoulder/X8_16
-      - HEBI/elbow/X8_9
-      - HEBI/wrist1/X5_1
-      - HEBI/wrist2/X5_1
+      - Arm/J1_base/X8_9
+      - Arm/J2_shoulder/X8_16
+      - Arm/J3_elbow/X8_9
+      - Arm/J4_wrist1/X5_1
+      - Arm/J5_wrist2/X5_1
