--- a/hebi_a-2085-05_moveit_config/config/ros_controllers.yaml
+++ b/hebi_a-2085-05_moveit_config/config/ros_controllers.yaml
@@ -9,11 +9,11 @@ generic_hw_control_loop:
 # Settings for ros_control hardware interface
 hardware_interface:
   joints:
-    - HEBI/base/X8_9
-    - HEBI/shoulder/X8_16
-    - HEBI/elbow/X8_9
-    - HEBI/wrist1/X5_1
-    - HEBI/wrist2/X5_1
+    - Arm/J1_base/X8_9
+    - Arm/J2_shoulder/X8_16
+    - Arm/J3_elbow/X8_9
+    - Arm/J4_wrist1/X5_1
+    - Arm/J5_wrist2/X5_1
   sim_control_mode: 1  # 0: position, 1: velocity
 # Publish all joint states
 # Creates the /joint_states topic necessary in ROS
@@ -26,8 +26,8 @@ controller_list:
     default: True
     type: FollowJointTrajectory
     joints:
-      - HEBI/base/X8_9
-      - HEBI/shoulder/X8_16
-      - HEBI/elbow/X8_9
-      - HEBI/wrist1/X5_1
-      - HEBI/wrist2/X5_1
+      - Arm/J1_base/X8_9
+      - Arm/J2_shoulder/X8_16
+      - Arm/J3_elbow/X8_9
+      - Arm/J4_wrist1/X5_1
+      - Arm/J5_wrist2/X5_1
