--- a/hebi_a-2085-06_moveit_config/config/ompl_planning.yaml
+++ b/hebi_a-2085-06_moveit_config/config/ompl_planning.yaml
@@ -146,5 +146,5 @@ hebi_arm:
     - LazyPRMstar
     - SPARS
     - SPARStwo
-  projection_evaluator: joints(HEBI/base/X8_9,HEBI/shoulder/X8_16)
+  projection_evaluator: joints(Arm/J1_base/X8_9,Arm/J2_shoulder/X8_16)
   longest_valid_segment_fraction: 0.005
