--- a/hebi_a-2084-01_moveit_config/config/ros_controllers.yaml
+++ b/hebi_a-2084-01_moveit_config/config/ros_controllers.yaml
@@ -25,7 +25,7 @@ controller_list:
     default: True
     type: FollowJointTrajectory
     joints:
-      - HEBI/base/X5_4
-      - HEBI/shoulder/X5_9
-      - HEBI/elbow/X5_4
-      - HEBI/wrist1/X5_1
+      - Arm/J1_base/X5_4
+      - Arm/J2_shoulder/X5_9
+      - Arm/J3_elbow/X5_4
+      - Arm/J4_wrist1/X5_1
