--- a/hebi_a-2085-04-parallel-gripper_moveit_config/config/ros_controllers.yaml
+++ b/hebi_a-2085-04-parallel-gripper_moveit_config/config/ros_controllers.yaml
@@ -30,13 +30,9 @@ controller_list:
       - Arm/J2_shoulder/X5_9
       - Arm/J3_elbow/X5_4
       - Arm/J4_wrist1/X5_1
-hand_controller:
-  type: GripperCommand
-  joints:
-    end_effector/input_l_finger
-  gains:
-    end_effector/input_l_finger:
-      p: 100
-      d: 1
-      i: 1
-      i_clamp: 1
+  - name: hand_controller
+    action_ns: gripper_action
+    type: GripperCommand
+    default: true
+    joints:
+      end_effector/input_l_finger
