--- a/hebi_a-2085-04-parallel-gripper_moveit_config/config/ros_controllers.yaml
+++ b/hebi_a-2085-04-parallel-gripper_moveit_config/config/ros_controllers.yaml
@@ -35,4 +35,4 @@ controller_list:
     type: GripperCommand
     default: true
     joints:
-      end_effector/input_l_finger
+      - end_effector/input_l_finger
