--- a/hebi_a-2085-05-parallel-gripper_moveit_config/config/ros_controllers.yaml
+++ b/hebi_a-2085-05-parallel-gripper_moveit_config/config/ros_controllers.yaml
@@ -37,4 +37,4 @@ controller_list:
     type: GripperCommand
     default: true
     joints:
-      end_effector/input_l_finger
+      - end_effector/input_l_finger
