--- a/hebi_a-2084-01_moveit_config/config/ros_controllers.yaml
+++ b/hebi_a-2084-01_moveit_config/config/ros_controllers.yaml
@@ -12,7 +12,7 @@ hardware_interface:
     - Arm/J1_base/X5_4
     - Arm/J2_shoulder/X5_9
     - Arm/J3_elbow/X5_4
-    - Arm/J4_wrist1/X5_1
+    - Arm/J4_wrist/X5_1
   sim_control_mode: 1  # 0: position, 1: velocity
 # Publish all joint states
 # Creates the /joint_states topic necessary in ROS
@@ -28,4 +28,4 @@ controller_list:
       - Arm/J1_base/X5_4
       - Arm/J2_shoulder/X5_9
       - Arm/J3_elbow/X5_4
-      - Arm/J4_wrist1/X5_1
+      - Arm/J4_wrist/X5_1
