--- a/hebi_a-2085-04_moveit_config/config/fake_controllers.yaml
+++ b/hebi_a-2085-04_moveit_config/config/fake_controllers.yaml
@@ -4,4 +4,4 @@ controller_list:
       - Arm/J1_base/X5_4
       - Arm/J2_shoulder/X5_9
       - Arm/J3_elbow/X5_4
-      - Arm/J4_wrist1/X5_1
+      - Arm/J4_wrist/X5_1
