--- a/hebi_a-2084-01-parallel-gripper_moveit_config/config/initial_positions.yaml
+++ b/hebi_a-2084-01-parallel-gripper_moveit_config/config/initial_positions.yaml
@@ -7,11 +7,11 @@ initial_positions:
   end_effector/input_l_finger: 0
 
 # Initial position for the arm when use_mock_hardware is false
-home_position: "0.0;2.09;2.09;0.0"
+home_position: "0.0;2.09;2.09;0.0;0.0"
 
 families: "HEBI_Arm"
 
-names: "J1_base;J2_shoulder;J3_elbow;J4_wrist"
+names: "J1_base;J2_shoulder;J3_elbow;J4_wrist;gripper"
 
 hrdf_pkg: "hebi_description"
 hrdf_file: "config/hrdf/A-2084-01-parallel-gripper.hrdf"
