--- a/hebi_a-2085-05-parallel-gripper_moveit_config/config/initial_positions.yaml
+++ b/hebi_a-2085-05-parallel-gripper_moveit_config/config/initial_positions.yaml
@@ -8,11 +8,11 @@ initial_positions:
   end_effector/input_l_finger: 0
 
 # Initial position for the arm when use_mock_hardware is false
-home_position: "0.0;2.09;2.09;1.57;0.0"
+home_position: "0.0;2.09;2.09;1.57;0.0;0.0"
 
 families: "HEBI_Arm"
 
-names: "J1_base;J2_shoulder;J3_elbow;J4_wrist1;J5_wrist2"
+names: "J1_base;J2_shoulder;J3_elbow;J4_wrist1;J5_wrist2;gripper"
 
 hrdf_pkg: "hebi_description"
 hrdf_file: "config/hrdf/A-2085-05-parallel-gripper.hrdf"
