--- a/hebi_a-2085-06_moveit_config/config/initial_positions.yaml
+++ b/hebi_a-2085-06_moveit_config/config/initial_positions.yaml
@@ -10,7 +10,7 @@ initial_positions:
 # Initial position for the arm when use_mock_hardware is false
 home_position: "0.0;2.09;2.09;0.0;1.57;0.0"
 
-families: "HEBI_Arm"
+families: "Arm"
 
 names: "J1_base;J2_shoulder;J3_elbow;J4_wrist1;J5_wrist2;J6_wrist3"
 
@@ -19,5 +19,5 @@ hrdf_file: "config/hrdf/A-2085-06.hrdf"
 gains_pkg: "hebi_description"
 gains_file: "config/gains/A-2085-06_gains.xml"
 
-use_mock_hardware: false
+use_mock_hardware: true
 use_gazebo: false
